--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: "Poppins", sans-serif; /*Nunito*/
+  font-family: "Nunito", sans-serif; /*Nunito*/
   color: #222222;
 }
 
@@ -68,7 +68,6 @@ img {
 }
 
 .menu-logo a {
-  font-family: "Nunito", sans-serif;
   font-size: 2.25em;
   font-weight: regular;
   margin: 0 10px;
@@ -88,4 +87,50 @@ img {
 .menu-nav a:hover {
   color: #122ab2;
   transition: .6s;
+}
+
+
+/* Introdução */
+
+.introducao {
+  max-width: 960px;
+  line-height: 1.1;
+  font-family: Nunito, sans-serif;
+  font-size: 3em;
+  margin: 0 auto;
+  padding: 60px 10px;
+}
+
+/* Sobre */
+
+.sobre {
+  border-top: 2px solid #2c70ff;
+  border-bottom: 2px solid #2c70ff;
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 60px 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.sobre-info {
+  flex: 2 1 300px;
+  margin: 0 10px;
+}
+
+.sobre-info h1 {
+  font-size: 3em;
+  margin-bottom: .5em;
+}
+
+.sobre-info p {
+  font-size: 1.25em;
+  line-height: 1.4;
+  margin-bottom: 1em;
+  color: #7c7c7c;
+}
+
+.sobre img {
+  flex: 1 1 160px;
+  margin: 0 10px;
 }
