--- a/style.css
+++ b/style.css
@@ -86,9 +86,10 @@ img {
 
 .menu-nav a:hover {
   color: #122ab2;
+  border-radius: 5px;
+  opacity: .9;
   transition: .6s;
 }
-
 
 /* Introdução */
 
